--- a/BuiMuiGaim/appsettings.json
+++ b/BuiMuiGaim/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=ByGameShop;Trusted_Connection=True;MultipleActiveResultSets=True"
+    //"DefaultConnection": "Server=DESKTOP-8LV9SV8\;Database=ByGameShop;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
