Application Type has been Added To Product. Modified GitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 *.sln.docstates
 
 Rocky Snippets
+BuiMuiGaim/wwwroot/images/product
+BuiMuiGaim/Migrations/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
