--- a/BuiMuiGaim/appsettings.json
+++ b/BuiMuiGaim/appsettings.json
@@ -10,5 +10,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailJet": {
+    "ApiKey": "4f7c7b3e15fe5f54e3faefc74861348c",
+    "SecretKey": "3c698d14ac30462d79c3168227f50f95"
+  }
 }
