Fixed Admin Panel. Fixed Key commiting

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 Rocky Snippets
 BuiMuiGaim/wwwroot/images/product
 BuiMuiGaim/Migrations/
-
+BuiMuiGaim/appsettings.json
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
