Changed stiles of header and footer. Added syncflusion, changed bootstrap version. Fixed Some layout bugs.

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 *.userosscache
 *.sln.docstates
 
-Rocky Snippets
+Helpful Info
 BuiMuiGaim/wwwroot/images/product
 BuiMuiGaim/Migrations/
 BuiMuiGaim/appsettings.json
