Added Product Realization of Repository. Changed from dbcontext to repository in Product. Fixed Bugs in changes to repository in Category

--- a/BuiMuiGaim_DataAccess/BuiMuiGaim_DataAccess.csproj
+++ b/BuiMuiGaim_DataAccess/BuiMuiGaim_DataAccess.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BuiMuiGaim_Models\BuiMuiGaim_Models.csproj" />
+    <ProjectReference Include="..\BuiMuiGame_Utility\BuiMuiGaim_Utility.csproj" />
   </ItemGroup>
 
 </Project>
