Genre and Publisher now. Added OrderDetail,OrderHeader

--- a/BuiMuiGaim/appsettings.json
+++ b/BuiMuiGaim/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ByGameShop;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=.;Database=BuiMuiGaimShop;Trusted_Connection=True;MultipleActiveResultSets=True"
     //"DefaultConnection": "Server=DESKTOP-8LV9SV8\;Database=ByGameShop;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
