Added pyament method BrainTree

--- a/BuiMuiGaim/appsettings.json
+++ b/BuiMuiGaim/appsettings.json
@@ -14,5 +14,12 @@
   "MailJet": {
     "ApiKey": "4f7c7b3e15fe5f54e3faefc74861348c",
     "SecretKey": "a11b8703294810df0e5822365e85dd73"
+  },
+
+  "BrainTree": {
+    "Environment": "sandbox",
+    "MerchantId": "7rdb8qjgqzkpf8dz",
+    "PublicKey": "3rdj4wxg7bxswpx3",
+    "PrivateKey": "a9d430160362b485d25597285e94bfd9"
   }
 }
