--- a/BuiMuiGame_Utility/BuiMuiGaim_Utility.csproj
+++ b/BuiMuiGame_Utility/BuiMuiGaim_Utility.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Braintree" Version="4.12.0" />
     <PackageReference Include="Mailjet.Api" Version="1.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.12" />
   </ItemGroup>
 
